--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: black;
     color: #333;
     line-height: 1.6;
 }
@@ -88,7 +88,7 @@ nav ul li a:hover {
     margin: 20px auto;
     width: 80%;
     max-width: 900px;
-    padding: 200px 10px;
+    padding: 90px 10px;
     
 }
 
@@ -103,7 +103,7 @@ nav ul li a:hover {
 }
 
 .technology {
-    background-color: #fff;
+    background-color: gainsboro;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
     padding: 30px;
